2008-01-28  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>

	* magick/Makefile.am: Update
	magick_libGraphicsMagick_la_DEPENDENCIES to use LTDLDEPS.

2008-01-26  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/image.c (SetImageInfo): Successfully read existing file
	names in the form file[123] which were failing to read since they
	appear to be a valid sub-image specification.

2008-01-24  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/utility.c (ExpandFilenames): If a filename appears to
	contain a wildcard specification, first check to see if there is
	file matching the unexpanded wildcard prior to engaging in the
	slow task of wildcard expansion.  Without this fix, expanding the
	command line takes a very long time if there are a huge number of
	files in the directory, and some file names appear to contain
	wildcard specifications.  Inspired by SourceForge bug reports [
	1878992 ] "literal square brackets in file name cause large delay"
	and [ 1783209 ] "converting runs slowly when subimage is
	specified", but this might not be the complete fix for the
	problem.

2008-01-22  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* Makefile.am: Update to Automake 1.10.1 and enable generation of
	an lzma compressed source package.

2008-01-19  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* configure.ac: Added configure option --with-umem to enable use
	of the umem memory allocation library available in Solaris 9,
	Update 3 and later, or from
	https://labs.omniti.com/trac/portableumem/.  This library supports
	concurrency in multi-threaded programs and supports debugging
	memory issues.  See
	http://developers.sun.com/solaris/articles/libumem_library.html
	for a description of how to use the library for debugging memory
	issues.

2008-01-17  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/command.c (VersionCommand): Include a "Large Memory" item
	in the Feature Support list.