@@ -4,7 +4,7 @@
 # Automake or Autoconf is changed.
 #
 
-libtoolize --verbose --copy --force --nonrecursive --ltdl=ltdl
+libtoolize --verbose --copy --force
 # echo 'm4_include([ltdl/m4/lt~obsolete.m4])' >> aclocal.m4
 aclocal -I ltdl/m4 -I m4
 autoheader
