@@ -9,15 +9,15 @@
 
 # Generated from ltversion.in.
 
-# serial 2578 ltversion.m4
+# serial 2586 ltversion.m4
 # This file is part of GNU Libtool
 
-m4_define([LT_PACKAGE_VERSION], [2.1a])
-m4_define([LT_PACKAGE_REVISION], [1.2578])
+m4_define([LT_PACKAGE_VERSION], [2.1c])
+m4_define([LT_PACKAGE_REVISION], [1.2586])
 
 AC_DEFUN([LTVERSION_VERSION],
-[macro_version='2.1a'
-macro_revision='1.2578'
+[macro_version='2.1c'
+macro_revision='1.2586'
 _LT_DECL(, macro_version, 0, [Which release of libtool.m4 was used?])
 _LT_DECL(, macro_revision, 0)
 ])
