@@ -21,6 +21,24 @@
 </tr>
 </table>
 <p>
+2008-02-01  Bob Friesenhahn  &lt;bfriesen@simple.dallas.tx.us&gt;
+
+<UL>
+  <LI> coders/tiff.c (WriteTIFFImage): Add logging for image resolution
+        and resolution units.<BR>
+  <LI> magick/version.h.in: Update copyright year to 2008.
+
+</UL>
+<p>
+2008-02-01  Gary V. Vaughan  &lt;gary@gnu.org&gt;
+
+<UL>
+  <LI> configure.ac: Updated for libtool-2.1b.
+  <LI> bootstrap (libtoolize): Libtoolize can figure out the mode and
+        directory for libltdl from configure.ac.
+
+</UL>
+<p>
 2008-01-28  Ralf Wildenhues  &lt;Ralf.Wildenhues@gmx.de&gt;
 
 <UL>
